--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
 
                     <h2 class="theme-color">Program Committee</h2>
                     <ul>
-                        <li><span style="color: #005f73;">Diana Goehringer</span>, Technische Universität Dresden</li>
-                        <li><span style="color: #005f73;">Harald Köstler</span>, Friedrich-Alexander-Universität Erlangen-Nürnberg</li>
-                        <li><span style="color: #005f73;">Martin Frank</span>, Karlsruhe Institute of Technology</li>
-                        <li><span style="color: #005f73;">Matthias Maiterth</span>, Oak Ridge National Laboratory</li>
-                        <li><span style="color: #005f73;">Michael Ott</span>, Leibniz Supercomputing Centre</li>
-                        <li><span style="color: #005f73;">Markus Rampp</span>, Max Planck Computing and Data Facility</li>
-                        <li><span style="color: #005f73;">Thomas Gruber</span>, Erlangen National High Performance Computing Center</li>
-                        <li><span style="color: #005f73;">Zhengji Zhao</span>, Lawrence Berkeley National Laboratory</li>
+                        <li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden</li>
+                        <li><span style="color: #005f73;">Harald Köstler</span> - Friedrich-Alexander-Universität Erlangen-Nürnberg</li>
+                        <li><span style="color: #005f73;">Martin Frank</span> - Karlsruhe Institute of Technology</li>
+                        <li><span style="color: #005f73;">Matthias Maiterth</span> - Oak Ridge National Laboratory</li>
+                        <li><span style="color: #005f73;">Michael Ott</span> - Leibniz Supercomputing Centre</li>
+                        <li><span style="color: #005f73;">Markus Rampp</span> - Max Planck Computing and Data Facility</li>
+                        <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center</li>
+                        <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory</li>
                     </ul>
                     <p>The full list of PC members will be added soon.</p>
 
