--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div style="flex: 3;">
                 <section id="objective">
                     <h2>Workshop Objective</h2>
-                    <p>The EESP workshop fosters the exchange of innovative strategies, tools, and best practices to enhance energy efficiency in computing environments. Amid rising energy costs and ambitious sustainability goals, optimizing energy use is critical for managing computing infrastructure. The workshop focuses on balancing performance, power consumption, and sustainability, offering practical guidance for exascale, Tier-1, and Tier-2 centers. Attendees will gain insights into greener, cost-effective practices to drive sustainability. Aligned with Sustainable Development Goals, EESP bridges HPC and AI communities, empowering operators to reduce Power Usage Effectiveness (PUE), source green energy, and help users make energy-conscious decisions. It highlights sustained performance over peak performance for future competitiveness.</p>
+                    <p>The EESP workshop fosters the exchange of innovative strategies, tools, and best practices to enhance energy efficiency in computing environments. Amid rising energy costs and ambitious sustainability goals, optimizing energy use is critical for managing computing infrastructure. The workshop focuses on balancing performance, energy and power consumption, and sustainability, offering practical guidance for exascale, Tier-1, and Tier-2 centers. Attendees will gain insights into greener, cost-effective practices to drive sustainability. Aligned with Sustainable Development Goals, EESP bridges HPC and AI communities, empowering operators to help users make energy-conscious decisions. It highlights sustained performance over peak performance for future competitiveness.</p>
                 </section>
 
                 <section id="scope">
@@ -47,7 +47,7 @@
                         <li>Energy-aware software optimization techniques for HPC & AI</li>
                         <li>Energy-efficient hardware architectures and practices for HPC & AI</li>
                         <li>Energy-efficient scheduling and resource management</li>
-                        <li>Sustainable data centre operation and design</li>
+                        <li>Energy-efficient data center administration and operation</li>
                         <li>Metrics for energy-efficient sustainable performance</li>
                         <li>Cluster-wide energy benchmarking with continuous regression analysis</li>
                         <li>Energy modeling, measurement and behavioral insights for CPUs and GPUs</li>
