--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                         <li><span style="color: #005f73;">Can Hankendi</span> - Boston University</li>                        
                         <li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden</li>
                         <li><span style="color: #005f73;">Harald Köstler</span> - Friedrich-Alexander-Universität Erlangen-Nürnberg</li>
+                        <li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich</li>                        
                         <li><span style="color: #005f73;">Martin Frank</span> - Karlsruhe Institute of Technology</li>
                         <li><span style="color: #005f73;">Matthias Maiterth</span> - Oak Ridge National Laboratory</li>
                         <li><span style="color: #005f73;">Michael Ott</span> - Leibniz Supercomputing Centre</li>
