--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                     <ul>
                         <li><span style="color: #005f73;">Can Hankendi</span> - Boston University</li>                        
                         <li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden</li>
+                        <li><span style="color: #005f73;">Hatem	Ltaief</span> - King Abdullah University of Science and Technology</li>        
                         <li><span style="color: #005f73;">Harald Köstler</span> - Friedrich-Alexander-Universität Erlangen-Nürnberg</li>
                         <li><span style="color: #005f73;">Kento Sato</span> - RIKEN Center for Computational Science</li>
                         <li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich</li>                        
