--- a/index.html
+++ b/index.html
@@ -105,19 +105,20 @@
 
                     <h2 class="theme-color">Program Committee</h2>
                     <ul>
-                        <li><span style="color: #005f73;">Can Hankendi</span> - Boston University</li>                        
-                        <li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden</li>
-                        <li><span style="color: #005f73;">Hatem	Ltaief</span> - King Abdullah University of Science and Technology</li>        
-                        <li><span style="color: #005f73;">Harald Köstler</span> - Friedrich-Alexander-Universität Erlangen-Nürnberg</li>
-                        <li><span style="color: #005f73;">Kento Sato</span> - RIKEN Center for Computational Science</li>
-                        <li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich</li>  
-                        <li><span style="color: #005f73;">Markus Rampp</span> - Max Planck Computing and Data Facility</li>
-                        <li><span style="color: #005f73;">Martin Frank</span> - Karlsruhe Institute of Technology</li>
-                        <li><span style="color: #005f73;">Matthias Maiterth</span> - Oak Ridge National Laboratory</li>
-                        <li><span style="color: #005f73;">Michael Ott</span> - Leibniz Supercomputing Centre</li>
-                        <li><span style="color: #005f73;">Ryan Grant</span> - Queen's University Canada</li>
-                        <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center</li>
-                        <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory</li>
+                        <li><span style="color: #005f73;">Can Hankendi</span> - Boston University, USA</li>                        
+                        <li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden, Germany</li>
+                        <li><span style="color: #005f73;">Fumiyoshi Shoji</span> - RIKEN Center for Computational Science, Japan</li>
+                        <li><span style="color: #005f73;">Hatem	Ltaief</span> - King Abdullah University of Science and Technology, Saudi Arabia</li>        
+                        <li><span style="color: #005f73;">Harald Köstler</span> - Friedrich-Alexander-Universität Erlangen-Nürnberg, Germany</li>
+                        <li><span style="color: #005f73;">Kento Sato</span> - RIKEN Center for Computational Science, Japan</li>
+                        <li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich, Germany</li>  
+                        <li><span style="color: #005f73;">Markus Rampp</span> - Max Planck Computing and Data Facility, Germany</li>
+                        <li><span style="color: #005f73;">Martin Frank</span> - Karlsruhe Institute of Technology, Germany</li>
+                        <li><span style="color: #005f73;">Matthias Maiterth</span> - Oak Ridge National Laboratory, USA</li>
+                        <li><span style="color: #005f73;">Michael Ott</span> - Leibniz Supercomputing Centre, Germany</li>
+                        <li><span style="color: #005f73;">Ryan Grant</span> - Queen's University, Canada</li>
+                        <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center, Germany</li>
+                        <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory, USA</li>
                     </ul>
                     <p>The full list of PC members will be added soon.</p>
 
