--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 
                     <h2 class="theme-color">Program Committee</h2>
                     <ul>
-                        <li><span style="color: #005f73;">Can Hankendi</span> - Boston University, USA</li>                        
+                        <li><span style="color: #005f73;">Can Hankendi</span> - Boston University, USA</li> 
+                        <li><span style="color: #005f73;">Dirk Pleiter</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden, Germany</li>
                         <li><span style="color: #005f73;">Fumiyoshi Shoji</span> - RIKEN Center for Computational Science, Japan</li>
                         <li><span style="color: #005f73;">Hatem	Ltaief</span> - King Abdullah University of Science and Technology, Saudi Arabia</li>        
