--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
                         <li><span style="color: #005f73;">Martin Frank</span> - Karlsruhe Institute of Technology, Germany</li>
                         <li><span style="color: #005f73;">Matthias Maiterth</span> - Oak Ridge National Laboratory, USA</li>
                         <li><span style="color: #005f73;">Michael Ott</span> - Leibniz Supercomputing Centre, Germany</li>
-                        <li><span style="color: #005f73;">Ryan Grant</span> - Queen's University, Canada</li>
+                        <li><span style="color: #005f73;">Nathan R. Tallent</span> - Pacific Northwest National Laboratory, USA</li>                        
+                        <li><span style="color: #005f73;">Ryan E. Grant</span> - Queen's University, Canada</li>
                         <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center, Germany</li>
                         <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory, USA</li>
                     </ul>
