--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div style="text-align: center; flex-grow: 2;">
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
-        <p>June 10, 2025, Hamburg, Germany</p>
+        <p>June 13, 2025, Hamburg, Germany</p>
         <p>In conjunction with <a href="https://www.isc-hpc.com/" target="_blank" style="color: inherit; text-decoration: none;">ISC High Performance 2025</a></p>
     </div>
     <div style="flex: 1; text-align: right;">
@@ -119,6 +119,7 @@
                         <li><span style="color: #005f73;">Michael Ott</span> - Leibniz Supercomputing Centre, Germany</li>
                         <li><span style="color: #005f73;">Nathan R. Tallent</span> - Pacific Northwest National Laboratory, USA</li>                        
                         <li><span style="color: #005f73;">Ryan E. Grant</span> - Queen's University, Canada</li>
+                        <li><span style="color: #005f73;">Stefano Markidis</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center, Germany</li>
                         <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory, USA</li>
                     </ul>
