--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                         <li><span style="color: #005f73;">Dirk Pleiter</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden, Germany</li>
                         <li><span style="color: #005f73;">Fumiyoshi Shoji</span> - RIKEN Center for Computational Science, Japan</li>
+                        <li><span style="color: #005f73;">Florina M. Ciorba</span> - University of Basel, Switzerland</li>
                         <li><span style="color: #005f73;">Hatem	Ltaief</span> - King Abdullah University of Science and Technology, Saudi Arabia</li>        
                         <li><span style="color: #005f73;">Harald Köstler</span> - Friedrich-Alexander-Universität Erlangen-Nürnberg, Germany</li>
                         <li><span style="color: #005f73;">Kento Sato</span> - RIKEN Center for Computational Science, Japan</li>
