--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory, USA</li>
                     </ul>
                     <p>The full list of PC members will be added soon.</p>
-
+                    </section>
 
 
 
