--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         <li><strong>Submission Guidelines</strong>
                             <ul>
                                 <li>Papers should be either <strong>short</strong> (work-in-progress, 6 pages) or <strong>regular</strong> (12 pages), including references and appendices.</li>
+                                <li>Submitted papers must be original and not previously published or under review for any other conference or journal.</li>
                                 <li>Use the <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank">Springer Lecture Notes in Computer Science (LNCS) template</a>.</li>
                                 <li>Submit papers in PDF format through the EasyChair submission system at <a href="https://easychair.org/conferences?conf=eesp25" target="_blank">https://easychair.org/conferences?conf=eesp25</a>.</li>
                             </ul>
@@ -118,7 +119,8 @@
                         <li><span style="color: #005f73;">Martin Frank</span> - Karlsruhe Institute of Technology, Germany</li>
                         <li><span style="color: #005f73;">Matthias Maiterth</span> - Oak Ridge National Laboratory, USA</li>
                         <li><span style="color: #005f73;">Michael Ott</span> - Leibniz Supercomputing Centre, Germany</li>
-                        <li><span style="color: #005f73;">Nathan R. Tallent</span> - Pacific Northwest National Laboratory, USA</li>                        
+                        <li><span style="color: #005f73;">Nathan R. Tallent</span> - Pacific Northwest National Laboratory, USA</li> 
+                        <li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>                         
                         <li><span style="color: #005f73;">Ryan E. Grant</span> - Queen's University, Canada</li>
                         <li><span style="color: #005f73;">Stefano Markidis</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center, Germany</li>
@@ -126,8 +128,6 @@
                     </ul>
                     <p>The full list of PC members will be added soon.</p>
                     </section>
-
-
 
                     <section id="collaborators">
                         <h2>Collaborators</h2>
