--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
                     <h2 class="theme-color">Program Committee</h2>
                     <ul>
+                        <li><span style="color: #005f73;">Aditya Deshpande</span> - Samsung Semiconductor, USA</li>                         
                         <li><span style="color: #005f73;">Can Hankendi</span> - Boston University, USA</li> 
                         <li><span style="color: #005f73;">Dirk Pleiter</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden, Germany</li>
