--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                         <li><span style="color: #005f73;">Matthias Maiterth</span> - Oak Ridge National Laboratory, USA</li>
                         <li><span style="color: #005f73;">Michael Ott</span> - Leibniz Supercomputing Centre, Germany</li>
                         <li><span style="color: #005f73;">Nathan R. Tallent</span> - Pacific Northwest National Laboratory, USA</li> 
-                        <li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>                         
+                        <li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>
+                        <li><span style="color: #005f73;">Ralf Schneider</span> - High Performance Computing Center Stuttgart, Germany</li>
                         <li><span style="color: #005f73;">Ryan E. Grant</span> - Queen's University, Canada</li>
                         <li><span style="color: #005f73;">Stefano Markidis</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center, Germany</li>
