--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     <ul>
                         <li><span style="color: #005f73;">Aditya Deshpande</span> - Samsung Semiconductor, USA</li>  
                         <li><span style="color: #005f73;">Aleksandar Ilic</span> - University of Lisbon, Portugal</li>
+                        <li><span style="color: #005f73;">Bronis De Supinski</span> - Lawrence Livermore National Laboratory, USA</li>
                         <li><span style="color: #005f73;">Can Hankendi</span> - Boston University, USA</li> 
                         <li><span style="color: #005f73;">Dirk Pleiter</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden, Germany</li>
@@ -124,6 +125,7 @@
                         <li><span style="color: #005f73;">Nathan R. Tallent</span> - Pacific Northwest National Laboratory, USA</li> 
                         <li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>
                         <li><span style="color: #005f73;">Ralf Schneider</span> - High Performance Computing Center Stuttgart, Germany</li>
+                        <li><span style="color: #005f73;">Radu Prodan</span> - University of Klagenfurt, Austria</li>
                         <li><span style="color: #005f73;">Ryan E. Grant</span> - Queen's University, Canada</li>
                         <li><span style="color: #005f73;">Stefano Markidis</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center, Germany</li>
