--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                         <li><span style="color: #005f73;">Fumiyoshi Shoji</span> - RIKEN Center for Computational Science, Japan</li>
                         <li><span style="color: #005f73;">Florina M. Ciorba</span> - University of Basel, Switzerland</li>
                         <li><span style="color: #005f73;">Gabriel Hautreux</span> - National Computer Center for Higher Education (CINES), France</li>
+                        <li><span style="color: #005f73;">Georg Hager</span> - Regionales Rechenzentrum Erlangen (RRZE), Germany</li>
                         <li><span style="color: #005f73;">Hatem	Ltaief</span> - King Abdullah University of Science and Technology, Saudi Arabia</li>        
                         <li><span style="color: #005f73;">Harald Köstler</span> - Friedrich-Alexander-Universität Erlangen-Nürnberg, Germany</li>
                         <li><span style="color: #005f73;">Kento Sato</span> - RIKEN Center for Computational Science, Japan</li>
