--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                     <h2 class="theme-color">Program Committee</h2>
                     <ul>
                         <li><span style="color: #005f73;">Aditya Deshpande</span> - Samsung Semiconductor, USA</li>  
+                        <li><span style="color: #005f73;">Andy Turner</span> - University of Leeds, England</li>
                         <li><span style="color: #005f73;">Aleksandar Ilic</span> - University of Lisbon, Portugal</li>
                         <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - UFRGS, Brazil</li>
                         <li><span style="color: #005f73;">Bronis De Supinski</span> - Lawrence Livermore National Laboratory, USA</li>
