--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                         <li><span style="color: #005f73;">Ralf Schneider</span> - High Performance Computing Center Stuttgart, Germany</li>
                         <li><span style="color: #005f73;">Radu Prodan</span> - University of Klagenfurt, Austria</li>
                         <li><span style="color: #005f73;">Ryan E. Grant</span> - Queen's University, Canada</li>
+                        <li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>                        
                         <li><span style="color: #005f73;">Stefano Markidis</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center, Germany</li>
                         <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory, USA</li>
