--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                         <li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>                        
                         <li><span style="color: #005f73;">Stefano Markidis</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center, Germany</li>
+                        <li><span style="color: #005f73;">Ondřej Vysocký</span> - IT4Innovations National Supercomputing Center, Czech Republic</li>
                         <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory, USA</li>
                     </ul>
                     </section>
