--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
                         <li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>
                         <li><span style="color: #005f73;">Ralf Schneider</span> - High Performance Computing Center Stuttgart, Germany</li>
                         <li><span style="color: #005f73;">Radu Prodan</span> - University of Klagenfurt, Austria</li>
+                        <li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>      
+                        <li><span style="color: #005f73;">Roman Wyrzykowski</span> - Czestochowa University of Technology, Poland</li>
                         <li><span style="color: #005f73;">Ryan E. Grant</span> - Queen's University, Canada</li>
-                        <li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>                        
                         <li><span style="color: #005f73;">Stefano Markidis</span> - KTH Royal Institute of Technology, Sweden</li>
                         <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center, Germany</li>
                         <li><span style="color: #005f73;">Ondřej Vysocký</span> - IT4Innovations National Supercomputing Center, Czech Republic</li>
