--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                         <li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>
                         <li><span style="color: #005f73;">Ralf Schneider</span> - High Performance Computing Center Stuttgart, Germany</li>
                         <li><span style="color: #005f73;">Radu Prodan</span> - University of Klagenfurt, Austria</li>
+                        <li><span style="color: #005f73;">Raphael Vitti</span> - Lawrence Berkeley National Laboratory, USA</li>
                         <li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>      
                         <li><span style="color: #005f73;">Roman Wyrzykowski</span> - Czestochowa University of Technology, Poland</li>
                         <li><span style="color: #005f73;">Ryan E. Grant</span> - Queen's University, Canada</li>
