--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                     <p>Submission for EESP 2025 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p>
                     <h3>Important Dates:</h3>
                     <ul>
-                        <li>Submission deadline: February 20, 2025, AoE</li>
-                        <li>Notification: March 28, 2025, AoE</li>
-                        <li>Camera ready deadline: April 30, 2025, AoE</li>
+                        <li>Submission deadline: <del>February 20, 2025</del> <strong>March 2, 2025, AoE (firm)</strong></li>
+                        <li>Notification: April 4, 2025, AoE</li>
+                        <li>Camera ready deadline: May 12, 2025, AoE</li>
                     </ul>
                 </section>
             </div>
