--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h3>Keynote Speech</h3>
                     	<table>
                     		<tr>
-                    			<td style="width: 120px;padding: 7px 0;"><img src="img/JohnShalf.jpg" width="100px" style="border-radius:50%"></img></td>
+                    			<td style="width: 120px;padding: 7px 0;"><img src="JohnShalf.png" width="100px" style="border-radius:50%"></img></td>
                     			<td>
                     				<p style="font-size: 24px; margin-bottom: 5px; padding-bottom: 0px;"><strong>John Shalf</strong></p>
                     				<p style="margin:0px;">Lawrence Berkeley National Laboratory (LBNL)</p>
