--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                     </ul>
                 </section>
 
-                <h3>Keynote Speech</h3>
+		<section id="program">
+                <h2>Keynote Speech</h2>
                     	<table>
                     		<tr>
                     			<td style="width: 120px;padding: 7px 0;"><img src="JohnShalf.png" width="100px" style="border-radius:50%"></img></td>
@@ -99,7 +100,7 @@
 			
 			<p>John Shalf is Department Head for Computer Science in the Applied Mathematics and Computational Science Research Division at Lawrence Berkeley National Laboratory (LBNL). He is a coauthor of over 90 publications in the field of parallel computing software and HPC technology, including three best papers and the widely cited report “The Landscape of Parallel Computing Research: A View from Berkeley” (with David Patterson and others). He also coauthored “ExaScale Software Study: Software Challenges in Extreme Scale Systems,” which sets the Defense Advanced Research Project Agency’s (DARPA’s) information technology research investment strategy for the next decade. He was a member of the Berkeley Lab/NERSC team that won a 2002 R&D 100 Award for the RAGE robot. Before joining Berkeley Lab in 2000, Shalf was a research programmer at the National Center for Supercomputing Applications at the University of Illinois and a visiting scientist at the Max-Planck-Institut für Gravitationphysick/Albert Einstein Institute in Potsdam, Germany, where he co-developed the Cactus code framework for computational astrophysics.</p>
 			<br/>
-
+		</section>
 
                 <section id="organization">
                     <h2>Workshop General Chair</h2>
