--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     		<tr>
                     			<td style="width: 120px;padding: 7px 0;"><img src="JohnShalf.png" width="100px" style="border-radius:50%"></img></td>
                     			<td>
-                    				<p style="font-size: 24px; margin-bottom: 5px; padding-bottom: 0px;"><strong>John Shalf</strong></p>
+                    				<p style="font-size: 24px; margin-bottom: 5px; padding-bottom: 0px;"><strong style="color: #005f73;">John Shalf</strong></p>
                     				<p style="margin:0px;">Lawrence Berkeley National Laboratory (LBNL)</p>
                     			</td>
                     		</tr>
