--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div style="text-align: center; flex-grow: 2;">
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
-        <p>June 13, 2025, Hamburg, Germany</p>
+        <p>June 13, 2025, 9 am -- 1 pm, Hamburg, Germany</p>
         <p>In conjunction with <a href="https://www.isc-hpc.com/" target="_blank" style="color: inherit; text-decoration: none;">ISC High Performance 2025</a></p>
     </div>
     <div style="flex: 1; text-align: right;">
