--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                     <h2>Announcements</h2>
 		<hr> <p><strong>The Call for Papers is now closed, and the keynote speech by John Shalf has been announced!</strong></p> <hr>
                     <p><strong>Call for Paper</strong></p>
-                    <p>Submission for EESP 2025 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p>
-                    <h3>Important Dates:</h3>
+                    <p>Submission for EESP 2025 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p> <hr>
+                    <h3>Important Dates</h3>
                     <ul>
                         <li>Submission deadline: <del>February 20, 2025</del> <strong>March 2, 2025, AoE (firm)</strong></li>
                         <li>Notification: April 2, 2025, AoE</li>
