--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
             <div style="flex: 1; padding-left: 20px;">
                 <section id="announcements">
                     <h2>Announcements</h2>
-		<hr> <p><strong>The Call for Papers is now closed, and the keynote speech by John Shalf has been announced!</strong></p> <hr>
-                    <p><strong>Call for Paper</strong></p>
+		<hr> </h3>CFP Closed and Keynote Announced!</h3> 
+			<p> The Call for Papers is now closed, and the keynote speech by John Shalf has been announced.</p> <hr>
+                    <h3>Call for Paper Open!</h3>
                     <p>Submission for EESP 2025 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p> <hr>
                     <h3>Important Dates</h3>
                     <ul>
