--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
                             <ul>
                                 <li>Accepted papers will be published as part of the <strong>ISC proceedings in the Springer LNCS series</strong>.</li>
                                 <li>There is an option for submitting two additional pages after the review to address reviewer feedback.</li>
+				<li>One author must present the accepted paper in person at ISC EESP 2025 in Hamburg and <a href="https://isc-hpc.com/attendance/registration" target="_blank">register for the ISC High Performance Conference with a 'Workshop Pass.'</a></li>
+				<li>The Best Paper Award will be presented in person at the workshop.</li>
                             </ul>
                         </li>
                     </ul>
