--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <ul>
                                 <li>Accepted papers will be published as part of the <strong>ISC proceedings in the Springer LNCS series</strong>.</li>
                                 <li>There is an option for submitting <strong>two additional pages</strong> after the review to address reviewer feedback.</li>
-				<li>One author must present the accepted paper in person at the workshop in Hamburg and <a href="https://isc-hpc.com/attendance/registration" target="_blank">register for the ISC High Performance Conference with a 'Workshop Pass.'</a></li>
+				<li>One author must present the accepted paper in person and <a href="https://isc-hpc.com/attendance/registration" target="_blank">register for the ISC High Performance with a 'Workshop Pass.'</a></li>
 				<li>The <strong>Best Paper Award</strong> will be presented in person at the workshop.</li>
                             </ul>
                         </li>
