--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 
     <footer>
         <p>&copy; 2025 EESP Workshop. All Rights Reserved.</p>
+	<p style="font-size: 0.8em;">The <a href="http://ayeshaafzal91.github.io/eesp">EESP25</a> site is maintained by <a href="https://sites.google.com/view/ayesha-afzal">Ayesha Afzal</a>.</p>
     </footer>
 </body>
 </html>
