--- a/index.html
+++ b/index.html
@@ -86,6 +86,39 @@
                     </ul>
                 </section>
 
+		<section id="schedule">
+    <h2>Workshop Program Schedule</h2>
+     <div class="time-block"><span class="bold">9:00 a.m. – 9:05 a.m.</span> — Welcome remarks & Best Paper announcement</div>
+
+    <div class="session blue">
+        <h3>🟦 Session 1: Keynote and Best Paper Presentation</h3>
+        <div class="time-block"><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech by John Shalf with Q&A</div>
+        <div class="time-block"><span class="bold">9:40 a.m. – 10:00 a.m.</span> — Best Paper talk with Q&A, <em>"What A Waste"</em> by Shaina Smith, Jordan M. Abt, and Ryan E. Grant</div>
+    </div>
+
+    <div class="session green">
+        <h3>🟩 Session 2: Energy-Efficient GPU Computing</h3>
+        <div class="time-block"><span class="bold">10:00 a.m. – 10:20 a.m.</span> — Paper talk with Q&A, <em>"Experience on clock rate adjustment for energy-efficient GPU-accelerated real-world codes"</em> — Giorgio Amati, Matteo Turisini, Andrea Monterubbiano, Mattia Paladino, Elisabetta Boella, Daniele Gregori, and Danilo Croce</div>
+        <div class="time-block"><span class="bold">10:20 a.m. – 10:40 a.m.</span> — Paper talk with Q&A, <em>"Characterizing GPU Energy Usage in Exascale-Ready Portable Science Applications"</em> — William Godoy, Oscar Hernandez, Paul Kent, Maria Patrou, Kazi Asifuzzaman, Narasinga Miniskar, Pedro Valero-Lara, Jeffrey Vetter, Matthew Sinclair, Jason Lowe-Power, and Bobby Bruce</div>
+    </div>
+
+    <div class="session yellow">
+        <h3>🟨 Session 3: System-Level Strategies for Energy-Efficient Computing</h3>
+        <div class="time-block"><span class="bold">10:40 a.m. – 11:00 a.m.</span> — Paper talk with Q&A, <em>"Running Energy-Efficient HPL on APUs: Strategies and Best Practices"</em> — Jean-Yves Vet and Gabriel Hautreux</div>
+        <div class="time-block"><span class="bold">11:00 a.m. – 11:30 a.m.</span> — Coffee Break</div>
+        <div class="time-block"><span class="bold">11:30 a.m. – 11:50 a.m.</span> — Paper talk with Q&A, <em>"DARE-ML: Democratized Accessible Resource Environment for Machine Learning in the SUPERCOM platform"</em> — Matteo Mendula, Caterina Leonelli, Marco Miozzo, and Paolo Dini</div>
+    </div>
+
+    <div class="session orange">
+        <h3>🟧 Session 4: Power Profiling and Energy Tuning Techniques</h3>
+        <div class="time-block"><span class="bold">11:50 a.m. – 12:10 p.m.</span> — Paper talk with Q&A, <em>"Pinpointing Idle-Power Regressions in Linux"</em> — Hannes Tröpgen, Till Smejkal, Thomas Ilsche, Robert Schöne, and Horst Schirmeier</div>
+        <div class="time-block"><span class="bold">12:10 p.m. – 12:30 p.m.</span> — Paper talk with Q&A, <em>"Power Capping Metric Evaluation for Improving Energy-Efficiency in HPC Applications"</em> — Maria Patrou, Thomas Wang, Wael Elwasif, Markus Eisenbach, Ross Miller, Oscar Hernandez, and William Godoy</div>
+        <div class="time-block"><span class="bold">12:30 p.m. – 12:50 p.m.</span> — Paper talk with Q&A, <em>"Analysis of Application Power Characteristics Using Performance Counters on A64FX"</em> — Ryoma Ohara, Keiji Yamamoto, and Toshihiro Hanawa</div>
+    </div>
+
+    <div class="time-block"><span class="bold">12:50 p.m. – 1:00 p.m.</span> — Closing remarks</div>
+</section>
+
 		<section id="program">
                 <h2>Keynote Speech</h2>
                     	<table>
