--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="session blue">
         <h3>🟦 Session 1: Keynote and Best Paper Presentation</h3>
         <ul>
-            <li><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech by John Shalf with Q&A; more information about the <a href="index.html#program">keynote</a>.</li>
+            <li><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech with Q&A, <em>"Future HPC Architectural Trends for Tackling AI's Hyper-Exponential Energy Crisis"</em> by John Shalf; more information about the <a href="index.html#program">keynote</a>.</li>
             <li><span class="bold">9:40 a.m. – 10:00 a.m.</span> — Best Paper talk with Q&A, <em>"What A Waste"</em> by Shaina Smith, Jordan M. Abt, and Ryan E. Grant</li>
         </ul>
     </div>
