--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 
     <div class="session blue">
         <h3>🟦 Session 1: Keynote and Best Paper Presentation</h3>
+        <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank">Session chair: Ayesha Afzal - Erlangen National High Performance Computing Center (NHR@FAU), Geramny</a></span></p>
+
         <p><span style="color: #005f73;">Session chair: Ayesha Afzal - Erlangen National High Performance Computing Center (NHR@FAU), Geramny</span></p>
         <ul>
             <li><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech with Q&A, <em>"Future HPC Architectural Trends for Tackling AI's Hyper-Exponential Energy Crisis"</em> by John Shalf; more information about the <a href="index.html#program">keynote</a>.</li>
@@ -120,7 +122,7 @@
 
     <div class="session orange">
         <h3>🟧 Session 4: Power Profiling and Energy Tuning Techniques</h3>
-        <p><span style="color: #005f73;">Session chair: Fumiyoshi Shoji - RIKEN Center for Computational Science (R-CCS), Japan</span></p>
+        <p><span style="color: #005f73;"> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNTQ=" target="_blank">Session chair: Fumiyoshi Shoji - RIKEN Center for Computational Science (R-CCS), Japan</a></span></p>
         <ul>
             <li><span class="bold">11:50 a.m. – 12:10 p.m.</span> — <em>"Pinpointing Idle-Power Regressions in Linux"</em> — Hannes Tröpgen, Till Smejkal, Thomas Ilsche, Robert Schöne, and Horst Schirmeier</li>
             <li><span class="bold">12:10 p.m. – 12:30 p.m.</span> — <em>"Power Capping Metric Evaluation for Improving Energy-Efficiency in HPC Applications"</em> — Maria Patrou, Thomas Wang, Wael Elwasif, Markus Eisenbach, Ross Miller, Oscar Hernandez, and William Godoy</li>
