--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h3>🟦 Session 1: Keynote and Best Paper Presentation</h3>
         <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank">Session chair: Ayesha Afzal - Erlangen National High Performance Computing Center (NHR@FAU), Geramny</a></span></p>
         <ul>
-            <li><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech with Q&A, <em>"Future HPC Architectural Trends for Tackling AI's Hyper-Exponential Energy Crisis"</em> by John Shalf; more information about the <a href="index.html#program">keynote</a>.</li>
+            <li><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech with Q&A, <em>"Future HPC Architectural Trends for Tackling AI's Hyper-Exponential Energy Crisis"</em> by <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMDk=" target="_blank">John Shalf</a>; more information about the <a href="index.html#program">keynote</a>.</li>
             <li><span class="bold">9:40 a.m. – 10:00 a.m.</span> — Best Paper talk with Q&A, <em>"What A Waste"</em> by Shaina Smith, Jordan M. Abt, and Ryan E. Grant</li>
         </ul>
     </div>
