--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <div class="session green">
         <h3>🟩 Session 2: Energy-Efficient GPU Computing</h3>
-        <p><span style="color: #005f73;">Session chair: TBA </span></p>
+        <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzgzMzY2MDI=" target="_blank">Session chair: Session chair: Zhengji Zhao - Lawrence Berkeley National Laboratory, USA</a></span></p>
         <ul>
             <li><span class="bold">10:00 a.m. – 10:20 a.m.</span> — <em>"Experience on clock rate adjustment for energy-efficient GPU-accelerated real-world codes"</em> — Giorgio Amati, Matteo Turisini, Andrea Monterubbiano, Mattia Paladino, Elisabetta Boella, Daniele Gregori, and Danilo Croce</li>
             <li><span class="bold">10:20 a.m. – 10:40 a.m.</span> — <em>"Characterizing GPU Energy Usage in Exascale-Ready Portable Science Applications"</em> — William Godoy, Oscar Hernandez, Paul Kent, Maria Patrou, Kazi Asifuzzaman, Narasinga Miniskar, Pedro Valero-Lara, Jeffrey Vetter, Matthew Sinclair, Jason Lowe-Power, and Bobby Bruce</li>
