--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
 <section id="schedule">
     <h2>Workshop Program Schedule</h2>
+    <p style="font-style: italic;">Location: Hall X3 - 1st floor</p>
     <div class="time-block"><span class="bold">9:00 a.m. – 9:05 a.m.</span> — Welcome remarks & Best Paper announcement</div>
 
     <div class="session blue">
