--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <div class="session yellow">
         <h3>🟨 Session 3: System-Level Strategies for Energy-Efficient Computing</h3>
-        <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzkxMjczNTI=" target="_blank">Session chair: Ralf Schneider - High Performance Computing Center Stuttgart, Germany</a></span></p>
+        <p><span style="color: #005f73;"> <del><a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzkxMjczNTI=" target="_blank">Session chair: Ralf Schneider - High Performance Computing Center Stuttgart, Germany</del> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMTQ=" target="_blank">Session chair: Hatem Ltaief - King Abdullah University of Science and Technology, Saudi Arabia</a></span></p>
         <ul>
             <li><span class="bold">10:40 a.m. – 11:00 a.m.</span> — <em>"Running Energy-Efficient HPL on APUs: Strategies and Best Practices"</em> — Jean-Yves Vet and Gabriel Hautreux</li>
             <li><span class="bold">11:00 a.m. – 11:30 a.m.</span> — Coffee Break</li>
