--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
             <div style="flex: 1; padding-left: 20px;">
                 <section id="announcements">
                     <h2>Announcements</h2>
+		<hr>
+			<h3>Workshop is happening now in Hall X3 - 1st floor</h3>
+			
                     <hr>
 <h3>Workshop Program is Updated!</h3>
 <p>
