--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <li><span class="bold">10:40 a.m. – 11:00 a.m.</span> — <em>"Running Energy-Efficient HPL on APUs: Strategies and Best Practices"</em> — Jean-Yves Vet and Gabriel Hautreux</li>
             <li><span class="bold">11:00 a.m. – 11:30 a.m.</span> — Coffee Break</li>
             <li><span class="bold">11:30 a.m. – 11:50 a.m.</span> — <em>"DARE-ML: Democratized Accessible Resource Environment for Machine Learning in the SUPERCOM platform"</em> — Matteo Mendula, Caterina Leonelli, Marco Miozzo, and Paolo Dini</li>
-				 <p>Institution: Centre Tecnològic de Telecomunicacions de Catalunya (CTTC) </p>
+				 <p>Institutions: [1] Centre Tecnològic de Telecomunicacions de Catalunya (CTTC) [2] University of Bologna </p>
 		<p><a href="assets/DARE-MLv2.pdf">[Presentation slides]</a></p>
         </ul>
     </div>
