--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <ul>
             <li><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech with Q&A, <em>"Future HPC Architectural Trends for Tackling AI's Hyper-Exponential Energy Crisis"</em> by <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMDk=" target="_blank">John Shalf</a>; visit <a href="index.html#program">here</a> for more information.</li>
             <li><span class="bold">9:40 a.m. – 10:00 a.m.</span> — Best Paper talk with Q&A, <em>"What A Waste"</em> by Shaina Smith, Jordan M. Abt, and Ryan E. Grant</li>
-		 <p>Institution: Queen's university</p>
+		 <p><em>Institution: Queen's university</em></p>
 					    <p><a href="assets/ISCPaperPresentation.pdf">[Presentation slides]</a></p>
         </ul>
     </div>
