--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <p><span style="color: #005f73;"> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMTQ=" target="_blank"> Session chair: Hatem Ltaief - King Abdullah University of Science and Technology, Saudi Arabia</a></span></p>
         <ul>
             <li><span class="bold">10:40 a.m. – 11:00 a.m.</span> — <em>"Running Energy-Efficient HPL on APUs: Strategies and Best Practices"</em> — Jean-Yves Vet and Gabriel Hautreux</li>
-						 <p>Institutions: [1] HPE [2] CINES </p>
+						 <p><em>Institutions: [1] HPE [2] CINES </em></p>
             <li><span class="bold">11:00 a.m. – 11:30 a.m.</span> — Coffee Break</li>
             <li><span class="bold">11:30 a.m. – 11:50 a.m.</span> — <em>"DARE-ML: Democratized Accessible Resource Environment for Machine Learning in the SUPERCOM platform"</em> — Matteo Mendula, Caterina Leonelli, Marco Miozzo, and Paolo Dini</li>
 				 <p><em>Institutions: [1] Centre Tecnològic de Telecomunicacions de Catalunya (CTTC) [2] University of Bologna</em> </p>
