--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <li><span class="bold">11:50 a.m. – 12:10 p.m.</span> — <em>"Pinpointing Idle-Power Regressions in Linux"</em> — Hannes Tröpgen, Till Smejkal, Thomas Ilsche, Robert Schöne, and Horst Schirmeier</li>
 					 <p><em>Institutions: [1] ZIH, CIDS, TU Dresden [2] Chair of Operating Systems, Faculty of CS, TU Dresden </em></p>
 																	    <p><a href="assets/presentation_eesp_linux_bisection.pdf">[Presentation slides]</a></p>
-            <li><span class="bold">12:10 p.m. – 12:30 p.m.</span> — <em>"Power Capping Metric Evaluation for Improving Energy-Efficiency in HPC Applications"</em> — Maria Patrou, Thomas Wang, Wael Elwasif, Markus Eisenbach, Ross Miller, Oscar Hernandez, and William Godoy</li>
+            <li><span class="bold">12:10 p.m. – 12:30 p.m.</span> — <em>"Power-Capping Metric Evaluation for Improving Energy Efficiency in HPC Applications"</em> — Maria Patrou, Thomas Wang, Wael Elwasif, Markus Eisenbach, Ross Miller, Oscar Hernandez, and William Godoy</li>
 					 <p><em>Institutions: [1] Oak Ridge National Laboratory, Oak Ridge, Tennessee, USA [2] Camas High School, Camas, Washington, USA </em></p>
 		<p><a href="assets/Power_Capping_EESP25_final.pdf">[Presentation slides]</a></p>
             <li><span class="bold">12:30 p.m. – 12:50 p.m.</span> — <em>"Analysis of Application Power Characteristics Using Performance Counters on A64FX"</em> — Ryoma Ohara, Keiji Yamamoto, and Toshihiro Hanawa</li>
