--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
             <li><span class="bold">12:10 p.m. – 12:30 p.m.</span> — <em>"Power-Capping Metric Evaluation for Improving Energy Efficiency in HPC Applications"</em> — Maria Patrou, Thomas Wang, Wael Elwasif, Markus Eisenbach, Ross Miller, Oscar Hernandez, and William Godoy</li>
 					 <p><em>Institutions: [1] Oak Ridge National Laboratory, Oak Ridge, Tennessee, USA [2] Camas High School, Camas, Washington, USA </em></p>
 		<p><a href="assets/Power_Capping_EESP25_final.pdf">[Presentation slides]</a></p>
-            <li><span class="bold">12:30 p.m. – 12:50 p.m.</span> — <em>"Analysis of Application Power Characteristics Using Performance Counters on A64FX"</em> — Ryoma Ohara, Keiji Yamamoto, and Toshihiro Hanawa</li>
+            <li><span class="bold">12:30 p.m. – 12:50 p.m.</span> — <em>"Analysis of Application Power Characteristics Using Performance Counters on A64FX"</em> </li>
+			<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzkwNDUzMjg=" target="_blank"> Ryoma Ohara</a>, Keiji Yamamoto, and Toshihiro Hanawa </p>
 					 <p> <em>Institutions: [1] The University of Tokyo, Japan [2]  R-CCS, RIKEN </em></p>
 		<p><a href="assets/EESP2025_slide_ohara.pdf">[Presentation slides]</a></p>
         </ul>
