--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             <li><span class="bold">10:40 a.m. – 11:00 a.m.</span> — <em>"Running Energy-Efficient HPL on APUs: Strategies and Best Practices"</em> </li>
 				<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzgwMTgwNTI=" target="_blank"> Jean-Yves Vet</a> and Gabriel Hautreux </p>
 						 <p><em>Institutions: [1] HPE [2] CINES </em></p>
+				<p><a href="assets/EESP_ISC25_Energy_Efficient_MI300_Strategies_Vet_Hautreux.pdf">[Presentation slides]</a></p>
             <li><span class="bold">11:00 a.m. – 11:30 a.m.</span> — Coffee Break</li>
 						 <p><em></em></p>		
             <li><span class="bold">11:30 a.m. – 11:50 a.m.</span> — <em>"DARE-ML: Democratized Accessible Resource Environment for Machine Learning in the SUPERCOM platform"</em> </li>
@@ -164,7 +165,7 @@
                 <h2>Keynote Speech</h2>
                     	<table>
                     		<tr>
-                    			<td style="width: 120px;padding: 7px 0;"><img src="JohnShalf.png" width="100px" style="border-radius:50%"></img></td>
+                    			<td style="width: 120px;padding: 7px 0;"><img src="assets/JohnShalf.png" width="100px" style="border-radius:50%"></img></td>
                     			<td>
                     				<p style="font-size: 24px; margin-bottom: 5px; padding-bottom: 0px;"><strong style="color: #005f73;">John Shalf</strong></p>
                     				<p style="margin:0px;">Lawrence Berkeley National Laboratory (LBNL)</p>
